changed the color of the burger, fixed the logo, the image behind the burger no longer protrudes, the font color on the burger icon has been set to the primary-color variable

--- a/style.css
+++ b/style.css
@@ -61,13 +61,12 @@ body {
   width: 4rem;
   border-radius: 50%;
   position: fixed;
-  top: 5.5vh; 
-  right: 5.5vw; 
+  top: 7.5vh; 
+  right: 7.5vw;
   background-image: url("https://api-cdn.arte.tv/api/mami/v1/program/en/RC-014483/1920x1080?ts=1624435186");
   z-index: 1000;
   background-size: 60%;
   transition: transform 0.8s cubic-bezier(0.86, 0.5, 0.2, 1.5);
-  opacity: 0.9;
 }
 
 .nav {
@@ -107,13 +106,6 @@ body {
   color: black;
   text-decoration: none;
   text-transform: uppercase;
-  background-image: linear-gradient(
-    120deg,
-    transparent 0%,
-    transparent 50%,
-    white 50%
-  );
-  background-size: 220%;
   transition: all 0.4s;
   font-weight: bold;
 }
@@ -126,7 +118,7 @@ body {
 
 /* functionality */
 .checkbox:checked ~ .background {
-  transform: scale(90);
+  transform:scale(100);
 }
 .checkbox:checked ~ .nav {
   opacity: 1;
@@ -148,7 +140,7 @@ body {
 .icon::after {
   width: 3rem;
   height: 2px;
-  background-color: gray;
+  background-color: var(--primary-color);
   display: inline-block;
 }
 
@@ -195,7 +187,7 @@ body {
 .logo {
   border-radius: 50%;
   width: 6rem;
-  position: absolute;
+  position: fixed;
   z-index: 2100;
   top: 5vh;
   left: 5vw;
